virtual-services/virtual_service_reviews_weight.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews-vs
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
      weight: 70
    - destination:
        host: reviews 
        subset: v3
      weight: 30
